add contact.html,edit profile and fixing index.html

--- a/placement/user/templates/header.html
+++ b/placement/user/templates/header.html
@@ -44,8 +44,20 @@
                  <!-- <li><a class="nav-link scrollto" href="faq.php">FAQ</a></li> -->
 
                  <li><a class="nav-link scrollto" href="/contact/">Contact</a></li>
+
+                 <li><a class="nav-link scrollto" href="/contact/">Welcome !!{{user.username}}</a></li>
                  <!-- <li><a class="nav-link scrollto" href="aboutus.php">FAQ</a></li> -->
 
+                <li class="dropdown"><a href=""><span>Profile</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                     <ul>
+
+                         <!-- <li><a href="admin/index.php">Admin</a></li> -->
+                         <li><a href="/editprofile/">Edit profile</a></li>
+                         <li><a href="/deleteprofile/">Delete profile</a></li>
+
+
+                     </ul>
+                 </li>
 
              </ul>
              <i class="bi bi-list mobile-nav-toggle d-none"></i>
