--- a/placement/user/templates/header.html
+++ b/placement/user/templates/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<img src="{% static 'assets/img/logo.png' %}" height="120px" alt="Logo" />
+<img src="{% static 'assets/img/lj.png' %}" height="120px" alt="Logo" />
     <header id="header" class="header fixed-top" data-scrollto-offset="0">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <a href="index.php" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
