--- a/placement/user/templates/header.html
+++ b/placement/user/templates/header.html
@@ -20,9 +20,9 @@
 <!--                 <li class="dropdown"><a href="login.php"><span>Login</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>-->
                      <ul>
 
-                         <li><a href="admin/index.php">Admin Login</a></li>
-                         <li><a href="login-candidates.php">Student Login</a></li>
-                         <li><a href="login-company.php">Placement Cell</a></li>
+                         <li><a href="/admin/">Admin Login</a></li>
+                         <li><a href="/login">Student Login</a></li>
+                         <li><a href="/login">Placement Cell</a></li>
 
 
                      </ul>
@@ -32,7 +32,7 @@
 
                          <!-- <li><a href="admin/index.php">Admin</a></li> -->
                          <li><a href="/register/">Students</a></li>
-                         <li><a href="register-company.php">Placement Cell</a></li>
+<!--                         <li><a href="register-company.php">Placement Cell</a></li>-->
 
 
                      </ul>
@@ -42,7 +42,7 @@
                  <!-- <li><a class="nav-link scrollto" href="login.php">Sign Up</a></li> -->
 
                  <!-- <li><a class="nav-link scrollto" href="faq.php">FAQ</a></li> -->
-
+                 <li><a class="nav-link scrollto" href="/form/">Form</a></li>
                  <li><a class="nav-link scrollto" href="/contact/">Contact</a></li>
 
                  <li><a class="nav-link scrollto" href="/contact/">Welcome !!{{user.username}}</a></li>
