--- a/placement/user/templates/contact.html
+++ b/placement/user/templates/contact.html
@@ -13,7 +13,7 @@
 
             <div class="section-header">
                 <h2><strong>Contact Us</strong></h2>
-                <p>JIIT NOIDA</p>
+                <p>LJ NOIDA</p>
             </div>
 
         </div>
@@ -36,7 +36,7 @@
                             <i class="bi bi-geo-alt flex-shrink-0"></i>
                             <div>
                                 <h4>Location:</h4>
-                                <p>Jaypee Institute of Information Technology, A 10, A Block, Block A, Industrial Area, Sector 62, Noida, Uttar Pradesh 201309.</p>
+                                <p>LJ University, LJ Campus, Sarkhej - Gandhinagar Highway, Makarba, Ahmedabad, Gujarat</p>
                             </div>
                         </div><!-- End Info Item -->
 
@@ -44,7 +44,7 @@
                             <i class="bi bi-envelope flex-shrink-0"></i>
                             <div>
                                 <h4>Email:</h4>
-                                <p>codestomp@gmail.com</p>
+                                <p>ljku.in</p>
                             </div>
                         </div><!-- End Info Item -->
 
@@ -52,7 +52,7 @@
                             <i class="bi bi-phone flex-shrink-0"></i>
                             <div>
                                 <h4>Call:</h4>
-                                <p>9821023521</p>
+                                <p>9999999999</p>
                             </div>
                         </div><!-- End Info Item -->
 
