--- a/placement/user/templates/form.html
+++ b/placement/user/templates/form.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 
+
 <div class="row">
       <div class="mx-auto col-10 col-md-8 col-lg-6">
         <form
@@ -12,6 +13,15 @@
            novalidate
         >
           {% csrf_token %}
+
+          {% if messages %}
+         <div class="alert alert-primary" role="alert">
+            {% for message in messages %}
+            {{ message }}
+            {% endfor %}
+         </div>
+             {% endif %}
+
           <div class="mb-3">
             <label class="form-label">Full name</label>
             <input type="text" required name="name" class="form-control" />
@@ -37,7 +47,7 @@
             <input type="text" required name="skills" class="form-control" />
           </div>
 
-          <button type="submit" class="btn btn-success">Add user</button>
+          <button type="submit" class="btn btn-success">submit</button>
         </form>
       </div>
     </div>
