--- a/placement/user/templates/index.html
+++ b/placement/user/templates/index.html
@@ -13,7 +13,7 @@
             <h2>Welcome to <span>LJ Placement Cell</span></h2>
             <p>For Your Entire Placement Journey.</p>
             <div class="d-flex">
-                <a href="login.php" class="btn-get-started scrollto">Login</a>
+                <a href="/login" class="btn-get-started scrollto">Login</a>
 
             </div>
         </div>
@@ -43,7 +43,7 @@
                             and graduates. The number of students placed through the campus interviews is
                             continuously rising.
                         </p>
-                        <a class="cta-btn align-self-start" href="#">Get Started</a>
+                        <a class="cta-btn align-self-start" href="/form">Get Started</a>
                     </div>
 
                     <div class="col-lg-4 col-md-6 order-first order-md-last d-flex align-items-center">
