--- a/placement/user/templates/Student_create.html
+++ b/placement/user/templates/Student_create.html
@@ -91,9 +91,11 @@
           <td>
              <a href="/Student_delete/{{i.id}}/" class="btn btn-danger">Delete</a>
           </td>
+           <td>
+                 <a href="{% url 'accept_request' i.user.id %}" class="btn btn-success accept-form" data-form-id="{{i.id}}">Accept</a>
+            </td>
             <td>
-                <a href="#" class="btn btn-success">Approve</a>
-
+                  <a href="#" class="btn btn-danger reject-form" data-form-id="{{i.id}}">Reject</a>
             </td>
 
         </tr>
