--- a/placement/user/templates/base1.html
+++ b/placement/user/templates/base1.html
@@ -151,6 +151,21 @@
 
 
 
+/* Colors */
+.notification-actor-red {
+    color: red;
+}
+
+.notification-verb-blue {
+    color: blue;
+}
+
+/* Sizes */
+.notification-large {
+    font-size: 50px;
+}
+
+
 
 
 
